[package]
name = "rslua_derive"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sssooonnnggg/rslua.git"
readme = "README.md"
keywords = ["lua", "lua53", "parser", "lexer"]
categories = ["parsing"]

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
